크로니클 맵으로 수정